--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.20",
     "pg-hstore": "^2.3.4",
     "postgres": "^3.3.2",
     "sequelize": "^6.26.0",
