--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 // .sequelizerc
 
-import { resolve } from "path";
+const { resolve } = require("path");
 
-export default {
+module.exports = {
   config: resolve("src/config", "sequelizeConfig.js"),
   "models-path": resolve("src", "models"),
   "seeders-path": resolve("db", "seeders"),
