--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,11 +27,13 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.3.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
-    "pg-hstore": "^2.3.4",
+    "pg": "^8.8.0",
     "postgres": "^3.3.2",
     "sequelize": "^6.26.0",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "supertest": "^6.3.3"
   }
 }
