--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jest": "^29.3.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "postgres": "^3.3.2",
     "sequelize": "^6.26.0",
-    "sequelize-cli": "^6.5.2",
     "supertest": "^6.3.3"
+  },
+  "devDependencies": {
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.5.2"
   }
 }
