--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "postgres": "^3.3.2",
-    "sequelize": "^6.26.0",
-    "supertest": "^6.3.3"
+    "sequelize": "^6.26.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "supertest": "^6.3.3"
   }
 }
