--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "pg": "^8.8.0",
     "postgres": "^3.3.2",
     "sequelize": "^6.26.0"
